syntax = "proto3";

package users;
option go_package = "proto/users;users";

import "proto/players.proto";

message User {
    int32 ID = 1;
    string PlayerID = 2;
    string Name = 3;
    string Description = 4;
    string Twitter = 5;
    string Twitch = 6;
    int32 Role = 7;
    players.Player Player = 8;
}

service UserService {
    rpc GetUser (GetUserRequest) returns (User);
    rpc UpdateUser (User) returns (User);
    rpc NewUser (NewUserRequest) returns (User);
}

message NewUserRequest {
    string FaceitId = 1;
}

message GetUserRequest {
    string Id = 1;
}
